@@ -2,13 +2,17 @@ name = [% distname %]
 
 [Prereqs]
 perl              = [% perl %]
-Class::Usul       = 0.26.0
+Class::Usul       = 0.65.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
 Module::Build     = 0.4004
 
 [Prereqs / BuildRequires]
+version           = 0.88
+Module::Build     = 0.4004
+
+[Prereqs / TestRequires]
 version           = 0.88
 Module::Build     = 0.4004
 Test::Requires    = 0.06
